--- a/estilos/robestilo.css
+++ b/estilos/robestilo.css
@@ -38,7 +38,10 @@ body{
 }
 .apres__links{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
 }
 .apres__links__but{
     background-color: #22D4FD;
